--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
           <div class="buttons">
             <button id="restart" class="btn-primary">🔄 Начать заново</button>
-            <button id="share" class="btn-secondary">📤 Поделиться в Telegram</button>
+            <button id="share" class="btn-secondary">📥 Скачать результат</button>
           </div>
           <div id="shareStatus" class="share-status hidden"></div>
         </div>
