--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <title>r1Type — тест скорости печати</title>
+    <title>r1Type</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <header class="header">
       <div class="header-content">
-        <div class="logo">⚡ r1Type</div>
+        <div class="logo">r1Type</div>
         <div class="controls">
           <div class="control-group">
             <label for="timeSelect">Время</label>
