--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <title>r1Type</title>
+    <title>r1Type — тест скорости печати</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <header class="header">
       <div class="header-content">
-        <div class="logo">r1Type</div>
+        <div class="logo">⚡ r1Type</div>
         <div class="controls">
           <div class="control-group">
             <label for="timeSelect">Время</label>
@@ -61,11 +61,11 @@
         <input
           type="text"
           id="input"
+          class="hidden-input"
           autocomplete="off"
           autocorrect="off"
           autocapitalize="off"
           spellcheck="false"
-          style="position: absolute; left: -9999px; opacity: 0"
         />
 
         <div id="resultsSection" class="hidden">
